# learn-os

./: .gitignore  GNUmakefile  README.md  flake.nix
bootloader/: Cargo.toml  x86_64-unknown-uefi-debug.json
bootloader/src/: debug.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/exe/: v0.rs
common/src/paging/: mod.rs
common/src/registers/: mod.rs
docs/: an-executable-format.md  debugging.md  device-management.md  targets.md
kernel/: Cargo.toml  kernel.ld  x86_64-none-learn_os-v0.json  x86_64-none-learn_os-v0.ld  x86_64-unknown-kernel.json
kernel/src/: io.rs  main.rs  panic.rs  serial.rs
uefi-pci/: Cargo.toml
uefi-pci/src/: lib.rs  raw.rs
